--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,22 @@
 .DS_Store
+
 .idea
+
 .vscode
+
 *.ai
+
 *.log
+
 *.pdf
+
 *.psd
+
 *.sublime*
+
+build/
 node_modules/
+
 npm-debug.*
-source/css/*.css
-source/css/*.map
+
 Thumbs.db
